# platform.core.uifw.voice-control-elm

./: AUTHORS  CMakeLists.txt  NOTICE  changelog  voice-control-elm-config.xml
data/: tooltip.edc  voice-control-elm.edc
data/po/: CMakeLists.txt  en_US.po  ko_KR.po  pl.po
doc/: Doxyfile  uix_voice_control_elm_doc.h  voice-control-elm-doc.dox  voice-control-elm_supported_widgets.dox
include/: CMakeLists.txt  voice-control-elm.pc.in  voice_control_elm.h
packaging/: voice-control-elm.spec
src/: CMakeLists.txt  vc_elm.c  vc_elm.h  vc_elm_core.c  vc_elm_core.h  vc_elm_core_default_widgets.c  vc_elm_main.h  vc_elm_rectangle.c  vc_elm_rectangle.h  vc_elm_tools.h  vc_elm_tooltip.c  vc_elm_tooltip.h  vc_elm_widget_wrapper.c  vc_elm_widget_wrapper.h
