FILE(GLOB VC_ELM_SOURCES *.c)

SET(VC_ELM_PKGS
	capi-base-common
	capi-system-info
	cynara-client
	cynara-session
	evas
	eina
	ecore
	elementary
	dlog
	libxml-2.0
	)

IF(${SRPOL_DEBUG} EQUAL "1")
ADD_DEFINITIONS("-DSRPOL_DEBUG")
ENDIF(${SRPOL_DEBUG} EQUAL "1")

	SET(VC_ELM_PKGS
		${VC_ELM_PKGS}
		voice-control-widget)

PKG_CHECK_MODULES(VC_ELM_DEPS ${VC_ELM_PKGS} REQUIRED)

ADD_DEFINITIONS(${VC_ELM_DEPS_CFLAGS})
ADD_DEFINITIONS(${VC_ELM_DEPS_CFLAGS_OTHER})

INCLUDE_DIRECTORIES(
	${VC_ELM_DEPS_INCLUDE_DIRS}
	${VC_ELM_INCLUDE_DIR}
	${PROJECT_SOURCE_DIR}/src
	)

ADD_LIBRARY(${LIBRARY_NAME} SHARED ${VC_ELM_SOURCES})
SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES
	COMPILE_FLAGS -fPIC
	SOVERSION "0.2.0"
	VERSION "0.2.0")

TARGET_LINK_LIBRARIES(${LIBRARY_NAME}
	${VC_ELM_DEPS_LIBRARIES})


INSTALL(TARGETS ${LIBRARY_NAME} DESTINATION ${LIBDIR})
